[project]
name = "myagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av==15.0.0",
    "livekit-agents[silero,turn-detector]>=1.2.14",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "python-dotenv>=1.1.1",
]
